fix: corrige envio de e-mails de convite

--- a/supabase/functions/send-invite-email/config.json
+++ b/supabase/functions/send-invite-email/config.json
@@ -1,9 +1,6 @@
-
 {
   "name": "send-invite-email",
   "version": "1.0.0",
   "description": "Função para enviar e-mails de convite para clientes",
-  "verify_jwt": true,
-  "allowed_request_domains": ["api.sendgrid.com"],
-  "import_map": "../import_map.json"
+  "verify_jwt": true
 }
